When allocing a l1page, if a page isn't available, use uvm_wait to wait for one to become available.  Should fix PR/49364.